# jeanspy

./: .gitignore  .gitmodules  LICENSE  README.md  RELEASE.md  __init__.py  dequad.py  hyp2f1_jax.py  model.py  model_numpyro.py  pyproject.toml  requirements.txt  sampler.py
.github/: copilot-instructions.md
benchmarks/jeans_comparison/: README.md  README_gravsphere_v1_isotropic.md  README_gravsphere_v1_om.md  README_gravsphere_v1_smoke.md  README_isotropic.md  README_nuts_smoke.md  README_om.md  README_sampler_isotropic.md  README_sampler_om.md  README_scaling_1000.md  README_scaling_8000.md
notebooks/: benchmark_jeans_codes.ipynb  demo_model.ipynb  demo_model_full.ipynb  demo_numpyro.ipynb  jeans_aies_dict.nc  jeans_plummer_zhao_nuts_1773204459.nc  jeans_plummer_zhao_nuts_1773281817.nc  jeanspy_numpyro_demo.ipynb  new_definition_of_model_and_parameter.ipynb  sampler_numpyro_demo.ipynb  workspace.ipynb
scripts/: benchmark_jeans_codes.py  compare_runtime_modes.py  mcmc.py  plot_Draco_SDSS_CMD_CMcut.py
src/jeanspy/: __init__.py  _jax_env.py  _jeanspy.py  dsph_model.py  dsphdata.py  hyp2f1_jax.py  jfactor.py  model.py  model_jax.py  model_numpyro.py  sampler.py  sampler_numpyro.py  swyft_legacy.py
tests/: _kernel_regression_utils.py  conftest.py  demo_numpyro_mode.py  plot_constant_kernel_backend_diff.py  swyfttest.py  test.py  test_anisotropy_kernels.py  test_dm_mass_consistency.py  test_hyp2f1_jax.py  test_import.py  test_model.py  test_model_jax.py  test_model_legacy_consistency.py  test_model_numpyro.py  test_numpyro_mode.py  test_runtime_config.py  test_sampler_numpyro.py
