[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jeanspy"
version = "0.1.0"
description = "Python library for Jeans analysis"
readme = "README.md"
authors = [{name="Shunichi Horigome"}]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "astropy>=7.1.0",
    "emcee>=3.1.6",
    "arviz>=1.0.0",
    "ipykernel",
    "h5netcdf",
    "h5py",
    "netCDF4",
    "zarr",
    "jax[cuda12]>=0.6.2",
    "numpyro[cuda12]>=0.18.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jeanspy*"]

[tool.setuptools.package-data]
jeanspy = ["data/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "mcmc: slow NumPyro MCMC execution tests; run explicitly with --run-mcmc",
]
