[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeanspy"
version = "0.1.0"
description = "Jeans-analysis toolkit for dwarf spheroidal galaxy dynamical modeling and inference"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Shunichi Horigome" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "astrophysics",
    "dwarf spheroidal galaxies",
    "jax",
    "jeans analysis",
    "numpyro",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "astropy>=7.1.0",
    "emcee>=3.1.6",
]

[project.urls]
Homepage = "https://github.com/gomeshun/jeanspy"
Repository = "https://github.com/gomeshun/jeanspy"
Issues = "https://github.com/gomeshun/jeanspy/issues"
Changelog = "https://github.com/gomeshun/jeanspy/releases"

[project.optional-dependencies]
numpyro_cpu = [
    "arviz[zarr, h5netcdf, netcdf4]>=1.0.0",
    "h5netcdf",
    "h5py",
    "netCDF4",
    "xarray",
    "zarr",
    "jax[cpu]>=0.6.2",
    "numpyro[cpu]>=0.18.0",
]
numpyro_cuda12 = [
    "arviz[zarr, h5netcdf, netcdf4]>=1.0.0",
    "h5netcdf",
    "h5py",
    "netCDF4",
    "xarray",
    "zarr",
    "jax[cuda12]>=0.6.2",
    "numpyro[cuda12]>=0.18.0",
]
dev = [
    "ipykernel",
    "mpmath>=1.3.0",
    "pytest>=9.0.2",
    "seaborn",
    "sympy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jeanspy*"]

[tool.setuptools.package-data]
jeanspy = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "mcmc: slow NumPyro MCMC execution tests; run explicitly with --run-mcmc",
]
